refactor!: Update selenium dependencies to v4.14