@@ -19,16 +19,14 @@ package io.appium.java_client.service.local;
 import com.google.common.collect.ImmutableList;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
+import io.appium.java_client.android.options.context.SupportsChromedriverExecutableOption;
+import io.appium.java_client.android.options.signing.SupportsKeystoreOptions;
 import io.appium.java_client.internal.ReflectionHelpers;
-import io.appium.java_client.remote.AndroidMobileCapabilityType;
 import io.appium.java_client.remote.MobileBrowserType;
-import io.appium.java_client.remote.MobileCapabilityType;
+import io.appium.java_client.remote.options.SupportsAppOption;
 import io.appium.java_client.service.local.flags.GeneralServerFlag;
 import io.appium.java_client.service.local.flags.ServerArgument;
 import lombok.SneakyThrows;
-import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang3.StringUtils;
-import org.apache.commons.lang3.SystemUtils;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.Platform;
 import org.openqa.selenium.os.ExecutableFinder;
@@ -52,6 +50,7 @@ import java.util.function.Function;
 
 import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.base.Preconditions.checkNotNull;
+import static com.google.common.base.Strings.isNullOrEmpty;
 import static org.openqa.selenium.remote.CapabilityType.PLATFORM_NAME;
 
 public final class AppiumServiceBuilder
@@ -86,8 +85,11 @@ public final class AppiumServiceBuilder
     private static final Function<File, String> NODE_JS_NOT_EXIST_ERROR = fullPath ->
             String.format("The main NodeJS executable does not exist at '%s'", fullPath.getAbsolutePath());
 
-    private static final List<String> PATH_CAPABILITIES = ImmutableList.of(AndroidMobileCapabilityType.KEYSTORE_PATH,
-            AndroidMobileCapabilityType.CHROMEDRIVER_EXECUTABLE, MobileCapabilityType.APP);
+    private static final List<String> PATH_CAPABILITIES = List.of(
+            SupportsChromedriverExecutableOption.CHROMEDRIVER_EXECUTABLE_OPTION,
+            SupportsKeystoreOptions.KEYSTORE_PATH_OPTION,
+            SupportsAppOption.APP_OPTION
+    );
 
     public AppiumServiceBuilder() {
         usingPort(DEFAULT_APPIUM_PORT);
@@ -142,14 +144,14 @@ public final class AppiumServiceBuilder
 
     private static File findMainScript() {
         File npm = findNpm();
-        List<String> cmdLine = SystemUtils.IS_OS_WINDOWS
+        List<String> cmdLine = System.getProperty("os.name").toLowerCase().contains("win")
                 // npm is a batch script, so on windows we need to use cmd.exe in order to execute it
                 ? Arrays.asList("cmd.exe", "/c", String.format("\"%s\" root -g", npm.getAbsolutePath()))
                 : Arrays.asList(npm.getAbsolutePath(), "root", "-g");
         ProcessBuilder pb = new ProcessBuilder(cmdLine);
         String nodeModulesRoot;
         try {
-            nodeModulesRoot = IOUtils.toString(pb.start().getInputStream(), StandardCharsets.UTF_8).trim();
+            nodeModulesRoot = new String(pb.start().getInputStream().readAllBytes(), StandardCharsets.UTF_8).trim();
         } catch (IOException e) {
             throw new InvalidServerInstanceException(
                     "Cannot retrieve the path to the folder where NodeJS modules are located", e);
@@ -282,10 +284,10 @@ public final class AppiumServiceBuilder
     @Nullable
     private static File loadPathFromEnv(String envVarName) {
         String fullPath = System.getProperty(envVarName);
-        if (StringUtils.isBlank(fullPath)) {
+        if (isNullOrEmpty(fullPath)) {
             fullPath = System.getenv(envVarName);
         }
-        return StringUtils.isBlank(fullPath) ? null : new File(fullPath);
+        return isNullOrEmpty(fullPath) ? null : new File(fullPath);
     }
 
     private void loadPathToMainScript() {
@@ -362,7 +364,7 @@ public final class AppiumServiceBuilder
         argList.add("--port");
         argList.add(String.valueOf(getPort()));
 
-        if (StringUtils.isBlank(ipAddress)) {
+        if (isNullOrEmpty(ipAddress)) {
             ipAddress = BROADCAST_IP4_ADDRESS;
         }
         argList.add("--address");
@@ -378,12 +380,12 @@ public final class AppiumServiceBuilder
         for (Map.Entry<String, String> entry : entries) {
             String argument = entry.getKey();
             String value = entry.getValue();
-            if (StringUtils.isBlank(argument) || value == null) {
+            if (isNullOrEmpty(argument) || value == null) {
                 continue;
             }
 
             argList.add(argument);
-            if (!StringUtils.isBlank(value)) {
+            if (!isNullOrEmpty(value)) {
                 argList.add(value);
             }
         }
